Refactored JPMS argument handling and referenced https://youtrack.jetbrains.com/issue/KT-20740 blocker.